--- a/index.css
+++ b/index.css
@@ -1,29 +1,79 @@
-body {    
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 45px;
-    background-color: rgb(201, 1, 174);
-    color: rgb(0, 128, 49);
-    justify-content: center;
-    align-items: center; 
+/* body {
+    font-size: 1em;
+    margin: 0;
+    padding: 0;
+    font-family: Verdana;
 }
 
-#output {
+.container {
+    margin-top: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+}
+
+.box {
+    background: rgba(240, 240, 240, .6);
+    width: 500px;
+    height: 310px;
+}
+
+.window {
+    text-align: center;
+}   
+
+input.window1 {
+    overflow: visible;
+    padding: 10px;
+    border: none;
+    font-size: 1em;
+    font-family: 'Courier New', Courier, monospace;
+    margin-bottom: 10px;
+}
+
+.submit {
+    margin-top: 10px;
+    padding: 10px 40px;
+    border-radius: 5px;
+    background: black;
+    color: #fff;
+} */
+
+body {
+    background-color: rgb(10, 10, 10);
+    color: rgb(0, 71, 18);
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 50px;
+}
+
+ul {
     list-style: none;
     text-align: center;
-    color: rgb(255, 251, 0);
 }
 
-#prompt {
+form {
     justify-content: center;
     align-items: center;
     text-align: center;
 }
-#prompt input {
+input {
     text-align: center;
+    background-color: rgb(10, 10, 10);
+    color: rgb(0, 71, 18);
     outline: none;
     border: none;
-    color: #fff;
-    background-color: rgb(201, 1, 174);
     font-size: 45px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+@media (max-width: 375px) {
+    body {
+        max-height: 700;   
+        font-size: 40px;
+    }
+
+    input {
+        font-size: 30px;
+    }
 }
